Custom load balancer implemented, fixing all the issues. Refactoring of poor code patterns.